crates/tui/tests/storybook/snapshots/app_usage_reset::usage_codex_reset_expiry_groups.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
















─ usage ────────────────────────────────────────────────────────────────────
 cost $0.0000

 Codex
   plan plus
   usage limit resets 3 available
     2 expire Jul 31
     1 expires Aug 07
   5h limit  |██████████████▋░░░|  82% used  resets Jan 01 00:00

╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  1. Refresh usage
  2. Redeem usage limit reset
 ○ normal                                                             1:1 0%
