crates/tui/tests/storybook/snapshots/app_usage_reset::usage_codex_reset_expiry_groups.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 76 30
 16   0   2 fg=AnsiValue(208)
 16   2   5 fg=AnsiValue(208) attrs=dim
 16   7  69 fg=AnsiValue(208)
 19   1   5 fg=AnsiValue(208) attrs=bold
 20   1   7 fg=AnsiValue(244)
 21   1  21 fg=AnsiValue(244)
 22   1  19 fg=AnsiValue(244)
 23   1  20 fg=AnsiValue(244)
 24   1  12 fg=AnsiValue(244)
 24  13   1 fg=AnsiValue(244) attrs=dim
 24  29   4 fg=AnsiValue(244) attrs=dim
 24  43  21 fg=AnsiValue(244)
 26   0  76 fg=AnsiValue(244)
 27   0   1 bg=AnsiValue(237)
 27   1   1 fg=Black bg=White
 27   2   3 bg=AnsiValue(237) attrs=dim
 27   5  13 fg=AnsiValue(208) bg=AnsiValue(237)
 27  18  58 bg=AnsiValue(237)
 28   1   4 attrs=dim
 29   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 29  10  60 bg=AnsiValue(233)
 29  70   6 fg=AnsiValue(244) bg=AnsiValue(233)
