crates/tui/tests/storybook/snapshots/buffer::decoration_fill_bg_paints_content_region.styles.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.styles_text()
---
  0   0  11 bg=DarkBlue
