crates/tui/tests/storybook/snapshots/buffer::decoration_fill_bg_paints_full_row.styles.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.styles_text()
---
  0   0  12 bg=DarkBlue
