crates/tui/tests/storybook/snapshots/buffer::emoji_double_width_glyphs_render.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
smelt: ✨  🚀  🔥  done
