crates/tui/tests/storybook/snapshots/buffer::highlight_hl_eol_paints_to_line_end.styles.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.styles_text()
---
  0   0   3 bg=DarkGreen
