crates/tui/tests/storybook/snapshots/buffer::highlight_range_paints_in_styles.styles.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.styles_text()
---
  0   4   3 fg=Yellow attrs=bold
