crates/tui/tests/storybook/snapshots/buffer::line_longer_than_viewport_truncates.snap
---
source: crates/tui/tests/storybook/mod.rs
assertion_line: 186
expression: frame.text()
---
this line is much l
