crates/tui/tests/storybook/snapshots/buffer::many_lines_more_than_viewport_height.styles.snap
---
source: crates/tui/tests/storybook/mod.rs
assertion_line: 187
expression: frame.styles_text()
---
  0  11   1 bg=Reset
  1  11   1 bg=Reset
  2  11   1 bg=Reset
